fix step two, add scrollbar, add host, remove container

--- a/src/app/main/dashboard/cards/week-progress-card/week-progress-card.component.scss
+++ b/src/app/main/dashboard/cards/week-progress-card/week-progress-card.component.scss
@@ -1,4 +1,7 @@
-.week-progress-card-container {
+:host {
     // REMOVE WHEN FINISHING LAYOUT STYLES
+    // IGNORE THIS CODE
     border: 1px solid black;
-}
+ }
+ // WRITE YOUR CODE HERE
+ 
